# MacClaw

./: .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.js  index.html  notch.html  package.json  tsconfig.json  vite.config.ts
scripts/: ci.sh
src/: App.tsx  notch.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: credentials.rs  main.rs  notch.rs  panel.rs  selection.rs
src/components/: CommandHints.tsx  CommandInput.tsx  ConnectForm.tsx  MediaBlock.tsx  ResponsePanel.tsx  SettingsForm.tsx
src/constants/: panel.ts
src/features/panel/: prompt-builder.test.ts  prompt-builder.ts  selection-prefill.ts  selection-submit.test.ts  submit-resolver.ts  types.ts  useSelectionPrefill.ts
src/hooks/: useCommandInput.ts  usePanelLifecycle.ts  usePanelResize.ts  useWsClient.ts
src/lib/: commands.ts  extract-text.ts  media-cache.ts  media-types.ts  panel-window.ts  parse-content.ts  settings.ts  shortcut-utils.ts  ws-client.ts
src/lib/__tests__/: commands.test.ts  settings.test.ts  ws-client.test.ts
