[package]
name = "macclaw"
version = "0.1.0"
description = "Raycast-style macOS client for OpenClaw"
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-global-shortcut = "2"
window-vibrancy = "0.5"
accessibility-sys = "0.2"
core-foundation = "0.10"
core-graphics = "0.24"
dirs = "6"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSScreen", "objc2-core-foundation"] }
objc2-foundation = "0.3"
raw-window-handle = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
lto = true
opt-level = "s"
strip = true
